--- a/package.json
+++ b/package.json
@@ -117,7 +117,8 @@
 		"define-properties": "^1.1.4",
 		"es-abstract": "^1.20.1",
 		"get-intrinsic": "^1.1.1",
-		"globalthis": "^1.0.3"
+		"globalthis": "^1.0.3",
+		"safe-regex-test": "^1.0.0"
 	},
 	"devDependencies": {
 		"@es-shims/api": "^2.2.3",
