--- a/package.json
+++ b/package.json
@@ -123,7 +123,7 @@
 	"devDependencies": {
 		"@es-shims/api": "^2.2.3",
 		"@ljharb/eslint-config": "^21.0.0",
-		"array.prototype.map": "^1.0.4",
+		"array.prototype.map": "^1.0.5",
 		"aud": "^2.0.1",
 		"auto-changelog": "^2.4.0",
 		"es6-shim": "^0.35.6",
@@ -133,6 +133,7 @@
 		"function.prototype.name": "^1.1.5",
 		"has-property-descriptors": "^1.0.0",
 		"has-strict-mode": "^1.0.1",
+		"in-publish": "^2.0.1",
 		"npmignore": "^0.3.0",
 		"nyc": "^10.3.2",
 		"object-inspect": "^1.12.2",
