[meta] add missing entrypoints to `exports`

--- a/package.json
+++ b/package.json
@@ -34,11 +34,21 @@
 		"./Date.prototype.getDate/polyfill": "./Date.prototype.getDate/polyfill.js",
 		"./Date.prototype.getDate/implementation": "./Date.prototype.getDate/implementation.js",
 		"./Date.prototype.getDate/shim": "./Date.prototype.getDate/shim.js",
+		"./Date.prototype.getUTCDate": "./Date.prototype.getUTCDate/index.js",
+		"./Date.prototype.getUTCDate/auto": "./Date.prototype.getUTCDate/auto.js",
+		"./Date.prototype.getUTCDate/polyfill": "./Date.prototype.getUTCDate/polyfill.js",
+		"./Date.prototype.getUTCDate/implementation": "./Date.prototype.getUTCDate/implementation.js",
+		"./Date.prototype.getUTCDate/shim": "./Date.prototype.getUTCDate/shim.js",
 		"./Date.prototype.getUTCFullYear": "./Date.prototype.getUTCFullYear/index.js",
 		"./Date.prototype.getUTCFullYear/auto": "./Date.prototype.getUTCFullYear/auto.js",
 		"./Date.prototype.getUTCFullYear/polyfill": "./Date.prototype.getUTCFullYear/polyfill.js",
 		"./Date.prototype.getUTCFullYear/implementation": "./Date.prototype.getUTCFullYear/implementation.js",
 		"./Date.prototype.getUTCFullYear/shim": "./Date.prototype.getUTCFullYear/shim.js",
+		"./Date.prototype.getUTCMonth": "./Date.prototype.getUTCMonth/index.js",
+		"./Date.prototype.getUTCMonth/auto": "./Date.prototype.getUTCMonth/auto.js",
+		"./Date.prototype.getUTCMonth/polyfill": "./Date.prototype.getUTCMonth/polyfill.js",
+		"./Date.prototype.getUTCMonth/implementation": "./Date.prototype.getUTCMonth/implementation.js",
+		"./Date.prototype.getUTCMonth/shim": "./Date.prototype.getUTCMonth/shim.js",
 		"./Date.prototype.toUTCString": "./Date.prototype.toUTCString/index.js",
 		"./Date.prototype.toUTCString/auto": "./Date.prototype.toUTCString/auto.js",
 		"./Date.prototype.toUTCString/polyfill": "./Date.prototype.toUTCString/polyfill.js",
