--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
 		"postlint": "es-shim-api --multi --bound",
 		"pretest": "npm run lint",
 		"test": "npm run tests-only",
-		"posttest": "aud --production",
+		"posttest": "npx npm@'>=10.2' audit --production",
 		"tests-only": "nyc tape 'test/**/*.js'"
 	},
 	"repository": {
@@ -135,7 +135,6 @@
 		"@es-shims/api": "^2.4.2",
 		"@ljharb/eslint-config": "^21.1.0",
 		"array.prototype.map": "^1.0.7",
-		"aud": "^2.0.4",
 		"auto-changelog": "^2.4.0",
 		"es6-shim": "^0.35.8",
 		"eslint": "=8.8.0",
