--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
 		"@ljharb/eslint-config": "^21.1.1",
 		"array.prototype.map": "^1.0.7",
 		"auto-changelog": "^2.5.0",
+		"encoding": "^0.1.13",
 		"es6-shim": "^0.35.8",
 		"eslint": "=8.8.0",
 		"evalmd": "^0.0.19",
