--- a/package.json
+++ b/package.json
@@ -124,11 +124,13 @@
 	"homepage": "https://github.com/es-shims/Date#readme",
 	"dependencies": {
 		"call-bind": "^1.0.8",
+		"call-bound": "^1.0.3",
 		"define-properties": "^1.2.1",
 		"es-abstract": "^1.23.7",
 		"es-errors": "^1.3.0",
 		"get-intrinsic": "^1.2.6",
 		"globalthis": "^1.0.4",
+		"math-intrinsics": "^1.1.0",
 		"safe-regex-test": "^1.1.0"
 	},
 	"devDependencies": {
